test/sema/initialize-non-null-pointer-with-null.delta.output
initialize-non-null-pointer-with-null.delta:5:14: error: cannot assign 'null' to 'int*' (add '?' to the type to make it nullable)
    int* p = null;
             ^
