test/sema/initialize-non-null-pointer-with-null.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    // CHECK: [[@LINE+1]]:14: error: cannot assign 'null' to 'int*' (add '?' to the type to make it nullable)
    int* p = null;
}
